--- a/client/src/Sidebar.css
+++ b/client/src/Sidebar.css
@@ -1,12 +1,13 @@
 .sidebar{
+    display: flex;
+    flex-direction: column;
     flex:0.35;
 }
-
 .sidebar__header{
     display:flex;
     justify-content:space-between;
     padding:20px;
-    border-right: 1px solid #3DAC4B;
+    border-right: 1px solid #9E9EA7;
 }
 
 .sidebar__headerRight{
@@ -21,6 +22,34 @@
     font-size:24px !important;
 }
 
+.sidebar__search{
+    display:flex;
+    align-items:center;
+    height:39px;
+    padding:10px;
+}
+
+.sidebar__searchContainer{
+    display:flex;
+    align-items:center;
+    background-color:#2F2E42;
+    width:100%;
+    height: 35px;
+    border-radius:20px;
+}
+
+.sidebar__searchContainer >.MuiSvgIcon-root{
+    padding-left:10px;
+}
+
+.sidebar__searchContainer >input{
+    border:none;
+    margin-left: 10px;
+}
+
+.icon__white{
+    color:#9E9EA7;
+}
 .icon__green{
     color:#3DAC4B;
 }
