--- a/client/src/Sidebar.css
+++ b/client/src/Sidebar.css
@@ -7,7 +7,7 @@
     display:flex;
     justify-content:space-between;
     padding:20px;
-    border-right: 1px solid #9E9EA7;
+    border-right: 1px solid #3DAC4B;
 }
 
 .sidebar__headerRight{
@@ -25,15 +25,16 @@
 .sidebar__search{
     display:flex;
     align-items:center;
-    /* background-color:#2F2E42;  */
-    height:39px;
+    background-color:#2F2E42; 
+    height:59px;
     padding:10px;
+    border-right: 1px solid #3DAC4B;
 }
 
 .sidebar__searchContainer{
     display:flex;
     align-items:center;
-    background-color:#2F2E42;
+    background-color:#16172C;
     width:100%;
     height: 35px;
     border-radius:20px;
@@ -50,6 +51,13 @@
     outline: none;
     color:white;
     caret-color:white;
+}
+
+.sidebar__chats{
+    background-color:#2F2E42;
+    flex:1;
+    overflow: auto;
+    border-right: 1px solid #3DAC4B;
 }
 
 .icon__white{
