Create chat component and design it's header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,3 +13,9 @@
     width:90vw;
     box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.4);
 }
+.icon__white{
+    color:#9E9EA7;
+}
+.icon__green{
+    color:#3DAC4B;
+}
