--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .app{
     display:grid;
     place-items: center;
-    background:#2F2E42;
+    background:#3DAC4B;
     height:100vh;
     color:white;
 }
@@ -11,7 +11,7 @@
     background-color:#16172C;
     height: 90vh;
     width:90vw;
-    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.4);
+    box-shadow: -1px 0px 50px -6px rgba(0, 0, 0, 0.6);
 }
 .icon__white{
     color:#9E9EA7;
