--- a/client/src/Chat.css
+++ b/client/src/Chat.css
@@ -1,5 +1,7 @@
 .chat{
     flex:0.65;
+    display:flex;
+    flex-direction:column;
     background-color:#2F2E42;
 }
 
@@ -8,9 +10,50 @@
     display:flex;
     padding:20px; 
     align-items:center;
-    /*   */
+    /* border-bottom: 1px solid #3DAC4B; */
 }
+
 .chat__headerInfo{
     flex:1;
     padding-left: 20px;
+}
+
+.chat__headerInfo > h3{
+    margin-bottom: 3px;
+    font-weight:500;
+}
+
+.chat__headerInfo> p{
+    color: gray;
+}
+
+.chat__headerRight{
+    display:flex;
+    justify-content:space-between;
+    min-width: 100px;
+}
+
+.chat__body{
+    flex:1;
+    padding:30px;
+    overflow: auto;
+}
+.chat__message{
+    position:relative;
+    font-size:16px;
+    padding:10px;
+    background-color: #16172C;
+    color:#fff;
+    border-radius: 10px;
+    width:fit-content;
+    margin-bottom:15px;
+}
+.chat__name{
+    position: absolute; 
+    top:-16px;
+    font-size:x-small;
+}
+.chat__timestamp{
+    margin-left: 10px;
+    font-size:x-small;
 }
